# CoMPaPy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
config/: compapy.yaml  joint_limits_fr3_noj3_noj5.yaml  joint_limits_fr3_noj3_smallj5.yaml  obstacles.json  scene.json
launch/: real.launch  sim.launch
scripts/: CoMPaPy.py  CoMPaPyRobust.py  MyCoMPaPy.py  main_example.py  main_load_obstacles.py  main_socket_client.py  main_test_eef_rotation.py  main_test_plan_and_move_l.py  main_test_ref_actions.py  main_test_ref_actions_advanced.py  measure_joints_read_freq.py  move_to_start_and_set_limits.py  utils.py
scripts/socket_interface/: frame_conversion.py  main_socket_client.py  pose_conversion.py  test_frame_conversion.py
scripts/tests/: test_eef_rotation.py  test_move_l_planner.py  test_plan_and_move_l.py  test_plan_l.py  test_ref_actions.py
